# Piscine_rust

./: .gitignore
Module00/ex00/: hello.rs
Module00/ex01/: min.rs
Module00/ex02/: collatz.rs  print_bytes.rs  yes.rs
Module00/ex03/: fizzbuzz.rs
Module00/ex04/: Cargo.toml  dont_panic.rs
Module00/ex04/src/: main.rs  other.rs  overflow.rs
Module00/ex05/src/: main.rs
Module00/ex06/: Cargo.toml
Module00/ex06/src/: lib.rs  main.rs
Module00/ex07/: Cargo.toml
Module00/ex07/src/: lib.rs  main.rs
Module01/ex00/src/: lib.rs
Module01/ex01/src/: lib.rs
Module01/ex02/src/: lib.rs  main.rs
Module01/ex03/src/: lib.rs
Module01/ex04/src/: lib.rs
Module01/ex06/src/: lib.rs
Module01/ex07/: Cargo.toml
Module01/ex07/src/: main.rs
Module01/ex08/src/: main.rs
Module02/ex00/src/: lib.rs
Module02/ex03/src/: main.rs
Module02/ex05/src/: main.rs
Module03/ex01/src/: lib.rs
old-Module00/ex01/: min.rs
old-Module00/ex02/: collatz.rs  print_bytes.rs
old-Module00/ex03/: fizz_buzz.rs
old-Module00/ex05/src/: main.rs
old-Module00/ex07/src/: main.rs
old-Module01/ex00/src/: lib.rs
old-Module01/ex01/src/: main.rs
old-Module01/ex05/src/: lib.rs
old-Module01/ex07/src/: main.rs
old-Module02/ex01/src/: lib.rs
old-Module02/ex02/src/: lib.rs
old-Module02/ex04/src/: main.rs
old-Module02/ex06/src/: lib.rs
old-Module02/ex07/src/: lib.rs
old-Module03/ex00/src/: main.rs
